--- a/app/src/main/res/layout/share_button_widget.xml
+++ b/app/src/main/res/layout/share_button_widget.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+  xmlns:app="http://schemas.android.com/apk/res-auto">
+
+  <androidx.cardview.widget.CardView
+    android:id="@+id/cardViewContainer"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/shareContainer"
+      android:id="@+id/shareContainer"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:padding="10dp">
+
+      <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/shareImageView"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="4dp"
+        app:srcCompat="@drawable/ic_facebook" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/shareTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/shareImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_facebook" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/shareTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_toEndOf="@+id/shareImageView"
-            android:text=""
-            android:textColor="@color/white_color"
-            android:textStyle="bold" />
+        android:layout_centerVertical="true"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@+id/shareImageView"
+        android:text=""
+        android:textColor="@color/white_color" />
     </RelativeLayout>
+  </androidx.cardview.widget.CardView>
 </merge>
